k8s/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: zevon-weather-deployment
    labels:
        app: frontend
spec:
    replicas: 1
    selector:
        matchLabels:
            app: frontend
    template:
        metadata:
            labels:
                app: frontend
        spec:
            containers:
                - name: zevon-weather
                  image: kanerix/zevon-weather:latest
                  imagePullPolicy: Always
                  ports:
                      - containerPort: 3000
                  resources:
                      limits:
                          memory: 2048Mi
                          cpu: '2'
