k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zevon-weather-deployment
  labels:
    app: nextjs
spec:
  replicas: 1
  selector:
    matchLabel:
      app: nextjs
  template:
    metadata:
      labels:
        app: nextjs
    spec:
      containers:
      - name: zevon-weather
      image: kanerix/zevon-weather
      ports: 
      - containerPort: 80
