k8s/Nginx.yaml
apiVersion: v1
kind: Service
metadata:
    name: zevon-weather-nginx-service
spec:
    selector:
        app: frontend
    ports:
        - protocol: TCP
          port: 80
          targetPort: 3000
