k8s/Service.yaml
apiVersion: v1
kind: Service
metadata:
    name: zevon-weather-service
spec:
    selector:
        app: zevon-weather-frontend
    ports:
        - protocol: TCP
          port: 80
          targetPort: 3000
